tests/errors/string_missing_end_quote.error
parse error at line 2 column 4 for Tag:
---
   ^